k8s/python-app/app-python.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      imagePullSecrets:
      - name: docker-secret
      containers:
      - name: python
        image: scoronadovasco/devops:v2
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc 
spec:
  type: ClusterIP
  ports:
  - port: 5000
  selector:
    app: python-app
