k8s/python-app/ingress-routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app-python
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: "python-app.test.com"
    http:
      paths:
      - path: /api/v1/details
        pathType: Prefix
        backend:
          service:
            name: python-app-svc 
            port:
              number: 5000
      - path: /api/v1/healthz
        pathType: Prefix
        backend:
          service:
            name: python-app-svc 
            port:
              number: 5000
